# RustroverProjects

stm32_template/: Cargo.toml  JLINK_DEBUG.md
stm32_template/.cargo/: config.toml
stm32_template/.run/: J-Link_Debug.run.xml  J-Link_Server.run.xml
stm32_template/scripts/: debug-server.sh  debug-stop.sh  sync-project-name.sh
stm32_template/src/: main.rs
