[package]
name = "stm32_template"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stm32_template"
path = "src/main.rs"
test = false
bench = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
stm32f4 = { version = "0.16.0", features = ["stm32f407", "rt"] }
stm32f4xx-hal = { version = "0.23.0", features = ["stm32f407"] }

[profile.dev]
codegen-units = 1
debug = 2
incremental = false
lto = false

[profile.release]
codegen-units = 1
debug = 2
lto = true
